fabric/testdata/out/ing_fabric-demo-app-head-api-organisations-id-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-http2":"true","zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/organisations/:id\") \u0026\u0026 Method(\"HEAD\") \u0026\u0026
      JWTPayloadAllKV(\"https://identity.zalando.com/realm\", \"users\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"cgallagher\",
      \"https://identity.zalando.com/managed-id\", \"bmooney\", \"https://identity.zalando.com/managed-id\",
      \"abaquero\", \"https://identity.zalando.com/managed-id\", \"fmoloney\", \"https://identity.zalando.com/managed-id\",
      \"ralmeida\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"1b09e061-d197-4ded-bf66-227551ae018c","deployment-id":"d-djq37m98ip2xqujdwbnxbucyp","pipeline-id":"l-siee3x8vnzbr7czzto12ofbji"},"name":"fabric-demo-app-head-api-organisations-id-admins","namespace":"default"},"spec":{"rules":[{"host":"fabric-demo-app.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-demo-app","servicePort":"http"},"pathType":"Implementat [...]
    zalando.org/aws-load-balancer-http2: "true"
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/organisations/:id") &&
      Method("HEAD") && JWTPayloadAllKV("https://identity.zalando.com/realm", "users")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "cgallagher",
      "https://identity.zalando.com/managed-id", "bmooney", "https://identity.zalando.com/managed-id",
      "abaquero", "https://identity.zalando.com/managed-id", "fmoloney", "https://identity.zalando.com/managed-id",
      "ralmeida") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2020-07-09T13:29:59Z"
  generation: 1
  labels:
    controller-uid: 1b09e061-d197-4ded-bf66-227551ae018c
    deployment-id: d-djq37m98ip2xqujdwbnxbucyp
    pipeline-id: l-siee3x8vnzbr7czzto12ofbji
  name: fabric-demo-app-head-api-organisations-id-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-demo-app
    uid: 1b09e061-d197-4ded-bf66-227551ae018c
  resourceVersion: "1357488605"
  uid: 4ef91466-e125-4699-9f9a-5a0a4a5b17a1
spec:
  rules:
  - host: fabric-demo-app.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-demo-app
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
